Fri Sep  6 08:33:37 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c:
	- fix column display for int (too short)
	- use sp_datatype_info for retrieve odbc information
	* src/odbc/unittests/t0001.c: use temporary table for test

Thu Sep  5 23:23:50 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* doc/api_status.txt:
	- bring some entries up to date
	- change dbfreelogin to dbloginfree

Thu Sep  5 22:42:50 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* doc/CodingStyle doc/faq.html doc/getting_started.txt:
	* doc/userguide.sgml:
	- fix some more spelling errors.

Thu Sep  5  15:46:04 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* configure.in: make --sysconfdir option work and make distcheck work

Thu Sep  5  14:04:09 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/convert.c:
	- fix error on multithreading environment checking recursive error
	  on tds_convert (added a tds_convert_noerror function)
	- added conversion from numeric to int and bits

Thu Sep  5 06:51:17 EDT 2002	Brian Bruns <camber@ais.org>
	* src/odbc/obdc.c: added SQL_FLOAT and friends to SQLColAttributes 
	display size.

Thu Sep  5  10:19:56 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/apps/tsql.c: print NULL for null, do not call tds_convert

Thu Sep  5  07:21:44 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/Makefile.am src/odbc/unittests/t0001.c:
	- fixed odbc test linking to odbc, not to tdsodbc driver

Thu Sep  5 00:57:18 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* doc/userguide.sgml:
	- fix a few spelling errors

Wed Sep  4 22:16:27 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/Makefile.am src/odbc/unittests/common.c:
	* src/odbc/unittests/common.h src/odbc/unittests/t0001.c:
	* configure.in src/odbc/Makefile.am src/odbc/convert_tds2sql.c:
	* src/odbc/odbc.c:
	- fixed return length of string for odbc
	- added first test for odbc (from Bill test)
	- allow empty password
